--- a/styles.scss
+++ b/styles.scss
@@ -20,7 +20,7 @@ html, body {
     width: 240px;
     height: 92px;
     background:url(./img/GarchaLinuxArgentina.png);
-    background-image: url(./img/GarchaLinuxArgentina.png);
+    background-image: url(./img/GarchLinuxArgentina.png);
     display:block;
     color:#fff;
     text-decoration:none;
@@ -31,7 +31,39 @@ html, body {
     font-size:1rem;
     border-bottom:.2px solid rgba(180,180,180,.25);
 }
+h3 {
+    color: #888;
+}
+small {
+    text-decoration-line: underline;
+    color: #444;
+}
+.cuerpo {
+  text-align: center;
+    h1 {
+  font-size: 3vh; 
+  font-weight: bold;
+  color: #6bf; /* Cambia el color a tu gusto */
+  text-align: center;
+}
 
+    padding-top: 6vh;
+    color: #bbb;
+    margin: 10vh;
+    h2 {
+        color: #ccc;
+    text-decoration-line: underline;
+        margin-top: 1rem;
+    }
+    p {
+        margin-top: 1rem;
+
+    text-align: center;
+    }
+}
+.card p {
+    color: #333;
+}
 .navbar {
     position: sticky;
     position: -webkit-sticky;
@@ -59,11 +91,11 @@ html, body {
     padding: 0 0.75vw;
     font-size: 1rem;
     font-weight: 700;
-    display: inline-block;
+    display: table-cell;
     height: 7vh;
     transition: color 1s ease-out;
     user-select: none;
-    padding-top: 7%;
+    vertical-align: middle;
 }
 .footer-container {
     display: flex;
@@ -78,10 +110,156 @@ html, body {
     border-top: 2px solid rgba(100,100,100,0.5);
     text-align: left;
     padding-bottom: 3rem;
-}
+} 
+.card ul {
+      color: #333;
+      li {
+        margin-left: 3vh;
+        margin-top: 1vh;
+      }
+  }
+
 .contact {
     padding-top: 2rem;
 }
 a:link {
     color: #69f;
 }
+// Full tutorial coming soon!
+
+.card-wrapper{
+    margin: 3vh;
+    display: grid;
+    justify-content: center;
+    padding-left: 25%;
+    padding-right: 25%;
+    grid-row-gap: 10vh;
+}
+.card {
+    // --card-blend-mode: multiply;
+    width: 100%;
+    background-color: #aaa;
+    border-radius: 0.5rem;
+    box-shadow: 0.05rem 0.1rem 0.3rem -0.03rem rgba(0, 0, 0, 0.45);
+    padding-bottom: 1rem;
+    background-image: linear-gradient(
+    var(--card-gradient),
+    white max(9.5rem, 27vh)
+    );
+    overflow: hidden;
+
+   img {
+    border-radius: 0.5rem 0.5rem 0 0;
+    width: 100%;
+    object-fit: cover;
+    // height: max(10rem, 25vh);
+    max-height: max(10rem, 85vh);
+    aspect-ratio: 16/9;
+    mix-blend-mode: var(--card-blend-mode);
+    // filter: grayscale(100);
+
+    ~ * {
+      margin-left: 2vh;
+      margin-right: 2vh;
+    }
+  }
+
+  > :last-child {
+    margin-bottom: 0;
+  }
+ h2 {
+    text-decoration-line: underline;
+    margin-top: 0rem;
+    font-size: 1.25rem;
+    color: #222;
+    padding-bottom: 2vh;
+}
+
+  &:hover,
+  &:focus-within {
+    --card-gradient: #24a9d5 max(8.5rem, 20vh);
+  }
+}
+
+/* Additional demo display styles */
+
+@media (max-width: 1300px) {
+
+.cuerpo {
+    padding-left: 3vh;
+    padding-right: 3vh;
+    margin: 0;
+    padding-bottom: 1vh;
+    h1 {
+        font-family: 'Cinzel Decorative', cursive;
+
+    }
+    p {
+
+  text-align: justify;
+  text-justify: auto;
+  padding-top: 3vh;
+    }
+}
+
+.card-wrapper{
+    justify-content: center;
+    padding-left: 7%;
+    padding-right: 0%;
+    grid-row-gap: 5vh;
+}
+
+  .card {
+    width: 90%;
+    font-size: 0.8rem;
+    
+  }
+  .card h2 {
+      font-size: 2.3rem;
+      padding-bottom: 2vh;
+    margin-left: 1.5vh;
+    padding-bottom: 2vh;
+    padding-top: 1vh;
+  }
+  .card li{
+    margin-left: 3vh;
+  }
+
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+  }
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    margin: 1.5rem; 
+    border-top: 2px solid rgba(100,100,100,0.5);
+    text-align: left;
+    padding-bottom: 3rem;
+  }
+  .contact {
+    padding-top: 2rem;
+  }
+  .navbtn {
+    color: rgba(180,180,180,.8);
+    text-decoration: none;
+    border: none;
+    padding: 0 0.75vw;
+    font-size: 2rem;
+    font-weight: 700;
+    height: 7vh;
+    transition: color 1s ease-out;
+    user-select: none;
+  }
+.contact {
+    font-size: 2rem;
+    margin-bottom: 1vh;
+    margin-top: 3vh;
+   }
+a {
+    font-size: 2rem;
+}
+}
+
